--- a/ResourceXAML/MainResource.xaml
+++ b/ResourceXAML/MainResource.xaml
@@ -4,4 +4,6 @@
                     xmlns:local="clr-namespace:SportCenter.ResourceXAML">
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
+    <viewmodel:BillViewModel x:Key="BillVM"></viewmodel:BillViewModel>
+    <viewmodel:PaymentTemplateViewModel x:Key="PaymentVM"></viewmodel:PaymentTemplateViewModel>
 </ResourceDictionary>
