--- a/Basketball_Field_Bill.xaml
+++ b/Basketball_Field_Bill.xaml
@@ -19,100 +19,123 @@
         WindowStyle="None"
         
         Name="BillWindow_BK"
-        DataContext="{StaticResource BillVM}"
-        Title="LOGIN" Height="500" Width="600">
+        DataContext="{StaticResource BillVM_FB}"
+        Title="LOGIN" Height="500" Width="550">
 
-    
-        <Grid>
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontSize" Value="20" />
+        </Style>
+        <Style TargetType="Rectangle">
+            <Setter Property="Stroke" Value="DarkBlue" ></Setter>
+            
+        </Style>
+    </Window.Resources>
+    <!--<ContentPresenter>
+        <ContentPresenter.Content>
+            
+        </ContentPresenter.Content>
+    </ContentPresenter>-->
+    <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
+            
+
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" >
+        <Grid Grid.Row="0" Margin="0,0,0,0" Grid.RowSpan="2" >
             <uc:ControlBarUC Tag="{Binding Title, ElementName=BillWindow}" ></uc:ControlBarUC>
         </Grid>
 
-        <TextBlock Text="---BASKETBALL COURT PAYMENT---" Grid.ColumnSpan="3" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontFamily="Bungee Inline"></TextBlock>
-        <Button
+        <TextBlock Text="---BASKETBALL COURT PAYMENT---" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="25" FontFamily="Bungee Inline" Margin="70,0.4,69,0.4"/>
+        <!--<Button
             Width="50"
             Grid.Row="2"
             Content="{materialDesign:PackIcon ArrowLeftBoldBox }"
             ToolTip="Icon"
-            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Left" Margin="20,0,0,0" />
+            IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" HorizontalAlignment="Left" Margin="20,0,0,0" />-->
 
-        <Grid Grid.Row="3" >  
-            <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <WrapPanel  Orientation="Horizontal">
-                    <ItemsControl ItemsSource="{Binding Listfield}" >
-                <ItemsControl.ItemTemplate>
+        <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,50,10,0">
+            <DockPanel Height="310">
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <ItemsControl x:Name="IC_football" ItemsSource="{Binding List_fieldwwithBooking}">
+                        <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <Grid Margin="0">
-                            <materialDesign:Card  Margin="20,40">
-                                <StackPanel>
+                                <Grid>
                                     <Expander
-                                        HorizontalAlignment="Stretch"
-                                        Header="{Binding field_name}"
-                                        >
-                                            <StackPanel
-                                                    Orientation="Vertical"
-                                                TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
-                                                Margin="24,8,24,16">
-                                                    <Grid>
-                                                        <Grid.RowDefinitions>
-                                                            <RowDefinition Height="Auto"></RowDefinition>
-                                                            <RowDefinition Height="auto"></RowDefinition>
-                                                        </Grid.RowDefinitions>
-                                                        <Grid Grid.Row="0">
-                                                            <Rectangle 
-                                            HorizontalAlignment="Left" 
-                                            Height="34" 
-                                            Width="140" 
-                                            RadiusY="4" 
-                                            RadiusX="4"
-                                            Stroke="DarkBlue" 
-                                            Margin="0,0,5,0" 
-                                            StrokeThickness="1.5"/>
-                                                            <TextBlock 
-                                                            Text="{Binding starttime}"
-                                            Margin="10,10,0,5"
-                                            FontSize="20"
-                                            Foreground="Black"
-                                            FontStretch="Medium"
-                                            />
-                                                            <TextBlock Text=" - "
-                                                                       FontStretch="Medium"
-                                                                       Foreground="Black"
-                                                                       Margin="60,10,0,5" 
-                                                                       FontSize="20">
-                                                            </TextBlock>
-                                                            <TextBlock Text="{Binding endtime}"
-                                                                       FontStretch="Medium"
-                                                                       Foreground="Black"
-                                                                       Margin="80,10,0,5" 
-                                                                       FontSize="20"></TextBlock>
-                                                            <Button Width="100" Content="PAY" Command="{Binding Show_PaymentTemplate}" FontSize="20" FontWeight="Bold" Margin="200,0,0,0" >
+                                        Header="{Binding}"
+                                        Width="500"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                        FontSize="20">
+                                        <Expander.HeaderTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock Text="{Binding List_Field.name}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </Expander.HeaderTemplate>
+                                        
+                                        <StackPanel
+                                            Orientation="Vertical"
+                                            TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
+                                            Margin="24,8,24,16">
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid Grid.Column="0">
+                                                    <ListView x:Name="Lvfield1" ItemsSource="{Binding List_Booking}">
+                                                        <ListView.ItemTemplate>
+                                                            <DataTemplate>
+                                                                <StackPanel Orientation="Horizontal">
+                                                                    <!--<Rectangle 
+                                                        HorizontalAlignment="Left" 
+                                                        Height="34" 
+                                                        Width="140" 
+                                                        RadiusY="4" 
+                                                        RadiusX="4"
+                                                        Stroke="DarkBlue" 
+                                                        Margin="0,0,5,0" 
+                                                        StrokeThickness="1.5"/>-->
+                                                                    <TextBlock 
+                                                        Text="{Binding List_Booking.start_time}"
+                                                        
+                                                        FontSize="20"
+                                                        Foreground="Black"
+                                                        FontStretch="Medium"
+                                                    />
+                                                                    <TextBlock Text=" - " FontStretch="Medium" Foreground="Black" FontSize="20">
+                                                                    </TextBlock>
+                                                                    <TextBlock Text="{Binding List_Booking.end_time}" FontStretch="Medium" Foreground="Black" FontSize="20"></TextBlock>
 
-                                                            </Button>
-                                                        </Grid>
+                                                                </StackPanel>
+                                                            </DataTemplate>
+                                                        </ListView.ItemTemplate>
+                                                    </ListView>
+                                                </Grid>
 
-                                                    </Grid>
-                                            </StackPanel>
 
-                                            </Expander>
-                                </StackPanel>
-                            </materialDesign:Card>
+                                                <Grid Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                                    <Button Width="100" Content="PAY" Command="{Binding }" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" Margin="100,0,0,0" />
+
+                                                </Grid>
+                                            </Grid>
+                                        </StackPanel>
+                                    </Expander>
+                                    <Border/>
                                 </Grid>
-                            
-                        </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-                </WrapPanel>
-        </ScrollViewer>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </DockPanel>
         </Grid>
+
     </Grid>
 
 </Window>
