--- a/ResourceXAML/MainResource.xaml
+++ b/ResourceXAML/MainResource.xaml
@@ -2,7 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewmodel="clr-namespace:SportCenter.ViewModel"
                     xmlns:local="clr-namespace:SportCenter.ResourceXAML">
-    
+    <viewmodel:SoccerFieldViewModel x:Key="SoccerFieldVM"></viewmodel:SoccerFieldViewModel>
+    <viewmodel:BasketballFieldViewModel x:Key="BasketballFieldVM"></viewmodel:BasketballFieldViewModel>
+    <viewmodel:VolleyballFieldViewModel x:Key="VolleyballFieldVM"></viewmodel:VolleyballFieldViewModel>
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
     <viewmodel:BillViewModel x:Key="BillVM"></viewmodel:BillViewModel>
