--- a/SoccerField.xaml
+++ b/SoccerField.xaml
@@ -1,15 +1,14 @@
-﻿<Window
+﻿<Window x:Class="SportCenter.SoccerField"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SportCenter"
+        mc:Ignorable="d"
          xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         
         xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:ViewModel="clr-namespace:SportCenter.ViewModel" x:Class="SportCenter.SoccerField"
-        mc:Ignorable="d"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
      TextElement.FontWeight="Regular"
      TextElement.FontSize="13"
@@ -22,91 +21,52 @@
         WindowStartupLocation="CenterScreen"
         
         x:Name="SoccerFieldWindow"
-      
-        Title="Phoenix Sport Center Managament" Height="500" Width="525">
+        DataContext="{StaticResource SoccerFieldVM}"
+        Title="Phoenix Sport Center Managament" Height="500" Width="550">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-    
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"/>
+            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32" Margin="0,0,0.046,-0.246" VerticalAlignment="Top"></uc:ControlBarUC>
         </Grid>
         <TextBlock Grid.Row="1" FontFamily="Bungee Inline" FontSize="30" Margin="194,11.246,194.046,391.938" Grid.RowSpan="2"  ><Run Text="Bóng đá"/></TextBlock>
-        <ScrollViewer Height="403" VerticalAlignment="Top" Grid.Row="2" Margin="0,65.246,0.046,-0.062">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <materialDesign:Card Grid.Row="0" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,23,22.061,321.846" Grid.RowSpan="3" Grid.ColumnSpan="3">
-                    <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
-                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
+        <Grid Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,50,10,0">
+            <DockPanel Height="310">
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <ItemsControl x:Name="IC_football" ItemsSource="{Binding _List_field_sc}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <materialDesign:Card Grid.Row="0" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="7" Grid.RowSpan="3" Grid.ColumnSpan="3">
+                                        <Grid>
+                                            <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
+                                                <materialDesign:PackIcon Kind="SoccerField" Height="auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
+                                            </materialDesign:Card>
+                                            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
                          Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
-                                   ><Run Text="Sân bóng số 1"/></TextBlock>
-                        <Grid>
-                            <Button Margin="144,55,210.769,9.738" Content="Thông tin"/>
-                        </Grid>
-                        <Grid>
-                            <Button Margin="264,55,91.508,9.738" Content="Đặt sân" />
-                        </Grid>
-
-                    </Grid>
-                </materialDesign:Card>
-                <materialDesign:Card Grid.Row="1" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,156,22.061,188.846" Grid.RowSpan="2" Grid.ColumnSpan="3">
-                    <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
-                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
-                         Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
-                                   ><Run Text="Sân bóng số 2"/></TextBlock>
-                        <Grid>
-                            <Button Margin="144,55,210.769,9.738" Content="Thông tin"/>
-                        </Grid>
-                        <Grid>
-                            <Button Margin="264,55,91.508,9.738" Content="Đặt sân"/>
-                        </Grid>
-
-                    </Grid>
-                </materialDesign:Card>
-                <materialDesign:Card Grid.Row="2" Width="463" Padding="8" UniformCornerRadius="6" Height="113" Margin="23,294,22.061,50.846" Grid.ColumnSpan="3">
-                    <Grid>
-                        <materialDesign:Card  Margin="9,3,337.769,7.738" Background="Cyan">
-                            <materialDesign:PackIcon Kind="SoccerField" Height="Auto" Width="100" Margin="0,-13,-0.308,-10.338" VerticalAlignment="Stretch" />
-                        </materialDesign:Card>
-                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,10,76.508,60.738" Width="211" Height="26"
-                         Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"       
-                                   ><Run Text="Sân bóng số 3"/></TextBlock>
-                        <Grid>
-                            <Button Margin="144,55,210.769,9.738" Content="Thông tin"/>
-                        </Grid>
-                        <Grid>
-                            <Button Margin="264,55,91.508,9.738" Content="Đặt sân"/>
-                        </Grid>
-
-                    </Grid>
-                </materialDesign:Card>
-
-            </Grid>
-        </ScrollViewer>
-
-
-
-
+                                   ><Run Text="{Binding List_FieldSoccer.name}"/></TextBlock>
+                                            <Grid>
+                                                <Button Margin="144,55,210.769,9.738" Content="Thông tin"/>
+                                            </Grid>
+                                            <Grid>
+                                                <Button Margin="264,55,91.508,9.738" Content="Đặt sân" />
+                                            </Grid>
+                                        </Grid>
+                                    </materialDesign:Card>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </DockPanel>
+        </Grid>
     </Grid>
 
 </Window>
